2004-04-27  Brian Kahne  <bkahne@ibmoto.com>

	* Plasma project should now build and pass its regression.

2004-04-23  Brian Kahne  <bkahne@ibmoto.com>

	*  Start of the plasma project.